tests/core/validation/test_concurrent_validation_data/TARGETS.fixture
china(
    name = "plate",
    slow = "slow.py",
    fast = "fast.py",
)
