tests/core/errors/test_formatting_data/TARGETS.fixture
load(":defs.bzl", "action_fail")

action_fail(
    name = "action_fail",
)

stub(
    name = "missing_dep",
    deps = [":xxx"],
)
